--- a/meta-data/custom.css
+++ b/meta-data/custom.css
@@ -2,8 +2,8 @@
 
 body {
   font-family: 'Noto Sans', 'Open Sans', sans-serif;
-  padding-left: 3vw;
-  padding-right: 3vw;
+  padding-left: 2vw;
+  padding-right: 2vw;
 }
 
 h1, h2, h3, .part {
@@ -12,10 +12,10 @@ h1, h2, h3, .part {
   color: #6296ff;
 }
 
-:root {
+/* :root {
   font-size: 16px;
   font-size: calc(9px + 1vmin);
-}
+} */
 
 h1, h2, h2 {
   margin-block-start: 0.6em;
@@ -138,7 +138,7 @@ table thead th {
 }
 
 .frontmatter {
-  background-image: url(QCC-logo.jpg);
+  background-image: url(QCC_logo.svg);
   background-repeat: no-repeat;
   background-position: 5% 5%;
   background-size: 25%;
@@ -146,10 +146,10 @@ table thead th {
 }
 
 .slide-container .slide {
-  background-image: url(nc_sa.png);
-  background-size: auto 0.7em;
+  background-image: url(by-nc-sa.svg);
+  background-size: auto 0.6em;
   background-repeat: no-repeat;
-  background-position: 6% 100%;
+  background-position: 6% calc(100% - 0.5em);
   background-attachment: local;
 }
 
@@ -207,3 +207,13 @@ mjx-container[jax="SVG"][display="true"]{
   border: 0.1em solid rgb(65, 170, 223);
   padding-left: 0.5em;
 }
+
+.slide {
+  max-width: 100vw;
+}
+
+
+:root {
+    --slide-ratio: calc(9/16);
+}
+
